# SAP-HANA-Neo-Service-download-data-in-parquet

./: .gitignore  Dockerfile  HANA_downloader.py  LICENCE  LICENSE  README.md  SAPHANANeo_data_downloader.py  docker-compose.yml  pyproject.toml  requirements.txt
docs/: Docker.md  examples.md
samples/: config_ECC_BSEG_GJAHR-2022.json  config_ECC_T001_MANDT-000_LAND1-DE.json  example_null_treatment_ABAP_date.json  example_null_treatment_several_DATS_fields.json
