[project]
name = "sap-hana-data-downloader"
version = "0.1.0"
description = "A Python tool to download data from SAP HANA databases and store it in parquet files with support for local and cloud storage (GCS, S3)"
authors = [
    { name = "Hernan Valenzuela" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.13"
keywords = ["sap", "hana", "parquet", "data-downloader", "etl", "gcs", "s3"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pandas>=2.1.0,<2.3",
    "pyarrow>=10.0.0,<14.0.0",
    "hana-ml>=2.16.0",
    "tqdm>=4.48.0",
    "fsspec>=2023.1.0,<2024.3.0",
    "gcsfs>=2022.5.0,<2024.4.0",
    "s3fs>=2022.5.0,<2024.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
]

[project.scripts]
hana-downloader = "HANA_downloader:main"

[project.urls]
Homepage = "https://github.com/Hernan-V/SAP-HANA-Neo-Service-download-data-in-parquet"
Repository = "https://github.com/Hernan-V/SAP-HANA-Neo-Service-download-data-in-parquet"
Issues = "https://github.com/Hernan-V/SAP-HANA-Neo-Service-download-data-in-parquet/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.tox
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=. --cov-report=term-missing"

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
